[package]
name = "jak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
critical-section = "1.1.1"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
fugit = "0.3.6"
panic-halt = "0.2.0"
rp-pico = "0.7.0"
usb-device = "0.2.9"
usbd-hid = "0.6.1"
